<resources>
    <string name="app_name">Silica</string>

    <string name="ADMOB_APP_ID">ca-app-pub-1474947036905548~8964044047</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="library">Library</string>
    <string name="store">Store</string>
    <string name="subject">Danh mục</string>
    <string name="me">Tôi</string>
    <string name="truyen_trong_nuoc">TRUYỆN TRONG NƯỚC</string>
    <string name="truyen_nuoc_ngoai">TRUYỆN NƯỚC NGOÀI</string>
    <string name="truyen_moi">TRUYỆN MỚI</string>
    <string name="truyen_xem_nhieu">TRUYỆN XEM NHIỀU</string>
    <string name="bang_xep_hang">BẢNG XẾP HẠNG</string>
    <string name="truyen_hoan_thanh">TRUYỆN HOÀN THÀNH</string>

    <string name="chi_tiet">Chi Tiết</string>
    <string name="noi_dung">Nội Dung</string>
    <string name="refresh">Refresh</string>
    <string name="thay_doi">Thay Đổi</string>

    <string name="app_name_fb">Koniki</string>
    <string name="FACEBOOK_APP_ID">701080807008710</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">239a1b571614af29e473068bf3c44cee</string>
    <string name="name">name</string>
    <string name="id">id</string>
    <string name="email">email</string>
    <string name="link">link</string>
    <string name="fields">fields</string>
    <string name="last_name">last_name</string>
    <string name="first_name">first_name</string>
    <string name="gender">gender</string>
    <string name="birthday">birthday</string>
    <string name="address">address</string>
    <string name="age_range">age_range</string>
    <string name="fields_name">id,name,link,email,location,last_name,hometown,first_name,gender,birthday,age_range,address</string>
    <string name="data">data</string>

    <string name="wifi_connection">The active connection is wifi.</string>
    <string name="mobile_connection">The active connection is mobile.</string>
    <string name="no_wifi_or_mobile">No wireless or mobile connection.</string>

    <string name="msg_login_failed">Đăng nhập không thành công! </string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="msg_subscribed">Subscribed </string>
    <string name="msg_subscribe_failed">Failed to subscribe</string>

    <string name="all_manga_fragment">Tất cả</string>
    <string name="full_manga_fragment">Truyện Full</string>
    <string name="most_views_manga_fragment">Xem nhiều</string>

    <string name="logout">LogOut</string>
    <string name="profile">Profile</string>
    <string name="user_notification">Gửi thông báo</string>
    <string name="policy">Tuyên bố quyền miễn trừ trách nhiệm</string>

    <string name="nomedia_document">.nomedia</string>

    <string name="title_activity_epub_viewer">EpubViewerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="table_of_contents">Table Of Content</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>


    <string name="signin_by_facebook">SignIn By Facebook</string>
    <string name="signin_by_google">SignIn By Google</string>
    <string name="signin_by">Đăng nhập:</string>

    <string name="xac_nhan">Yes</string>


</resources>
